--- a/ch_100_app/templates/base.html
+++ b/ch_100_app/templates/base.html
@@ -1,31 +1,58 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Coffee Hunter 100</title>
-        <link rel="stylesheet" href="/static/style.css">
-    </head>
-    <body>
-        <div id="content">
-            {% for message in get_flashed_messages() %}
-                <p>{{ message }}</p>
-            {% endfor %}
-            <nav>
-                <a href="/">Home</a>
-                <div>
-                    {% if current_user.is_authenticated %}
-                        <a href="/logout">Log Out</a>
-                    {% else %}
-                        <a href="/signup">Signup</a>
-                        <a href="/login">Log In</a>
-                    {% endif %}
-                </div>
-            </nav>
+<html lang="en">
+  <head>
+    <title>Coffee Hunter 100</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1"
+    />
+    <meta charset="utf-8" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/static/style.css" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="../static/favicon.svg"
+    />
+  </head>
+  <body>
+    <div id="base-content">
+      {% for message in get_flashed_messages() %}
+      <p>{{ message }}</p>
+      {% endfor %}
 
-            {% if current_user.is_authenticated %}
-                <p>You are logged in as {{ current_user.username }}</p>
-            {% endif %}
+      <ul class="nav nav-tabs">
+        <li>
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        {% if current_user.is_authenticated %}
+        <li class="nav-item">
+          <a class="nav-link" href="/logout">Log Out</a>
+        </li>
+        {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="/signup">Signup</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Log In</a>
+        </li>
+        {% endif %}
+      </ul>
 
-            {% block content %}{% endblock %}
-        </div>
-    </body>
+      {% if current_user.is_authenticated %}
+      <p>You are logged in as {{ current_user.username }}</p>
+      {% endif %} 
+
+      {% block content %}
+      
+      {% endblock %}
+      
+    </div>
+
+  </body>
 </html>
