--- a/ch_100_app/templates/base.html
+++ b/ch_100_app/templates/base.html
@@ -28,6 +28,12 @@
         </li>
         {% if current_user.is_authenticated %}
         <li class="nav-item">
+          <a class="nav-link" href="/new_bean">New Bean</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/new_note">New Note</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/logout">Log Out</a>
         </li>
         {% else %}
@@ -39,21 +45,12 @@
         </li>
         {% endif %}
       </ul>
-      
+
       {% for message in get_flashed_messages() %}
-        <p>{{ message }}</p>
-      {% endfor %}
-      
-
-      {% if current_user.is_authenticated %}
+      <p>{{ message }}</p>
+      {% endfor %} {% if current_user.is_authenticated %}
       <p>You are logged in as {{ current_user.username }}</p>
-      {% endif %} 
-
-      {% block content %}
-      
-      {% endblock %}
-      
+      {% endif %} {% block content %} {% endblock %}
     </div>
-
   </body>
 </html>
