--- a/ch_100_app/templates/base.html
+++ b/ch_100_app/templates/base.html
@@ -47,9 +47,11 @@
       </ul>
 
       {% for message in get_flashed_messages() %}
-      <p>{{ message }}</p>
-      {% endfor %} {% if current_user.is_authenticated %}
-      <p>You are logged in as {{ current_user.username }}</p>
+        <div class="alert alert-dark" role="alert">{{ message }}</div>
+      {% endfor %}
+      
+      {% if current_user.is_authenticated %}
+        <p>You are logged in as {{ current_user.username }}</p>
       {% endif %} {% block content %} {% endblock %}
     </div>
   </body>
