--- a/ch_100_app/templates/new_bean.html
+++ b/ch_100_app/templates/new_bean.html
@@ -1,9 +1,10 @@
-{% extends 'base.html' %} {% from "_render_field.html" import
-render_field %} {% block content %}
+{% extends 'base.html' %}
+{% from "_render_field.html" import render_field %}
+{% block content %}
 
 <h1 class="new-header">New Bean</h1>
 
-<form action="/signup" method="POST">
+<form action="/new_bean" method="POST">
   {{ form.csrf_token }}
 
   <section>
