--- a/ch_100_app/templates/new_note.html
+++ b/ch_100_app/templates/new_note.html
@@ -3,16 +3,17 @@ render_field %} {% block content %}
 
 <h1 class="new-header">New Note</h1>
 
-<form action="/signup" method="POST">
+<form action="/new_note" method="POST">
   {{ form.csrf_token }}
 
   <section>
     <fieldset>
-      <legend>Order, Brew Method, Date & Observations</legend>
+      <legend>Bean, Order, Brew Method, Date & Observations</legend>
       
+      {{ render_field(form.bean) }}
       {{ render_field(form.order) }}
       {{ render_field(form.brew_method) }}
-      {{ render_field(form.date_time) }}
+      {{ render_field(form.date_recorded) }}
       {{ render_field(form.observations) }}
     </fieldset>
   </section>
