--- a/ch_100_app/templates/coffee_context.html
+++ b/ch_100_app/templates/coffee_context.html
@@ -8,62 +8,104 @@
   </p>
 </header>
 
-<article>
+<section>
   <header>
-    <h2>Coffee Roast Levels:</h2>
-    <p>Roasting is...</p>
+    <h2>Sections:</h2>
+  </header>
+
+  <nav class="nav flex-column">
+    <h3>
+      <a class="nav-link" href="#origins">Origins</a>
+    </h3>
+
+    <h3>
+      <a class="nav-link" href="#cultivars">Cultivars</a>
+    </h3>
+
+    <h3>
+      <a class="nav-link" href="#wash-processes">Wash Processes</a>
+    </h3>
+
+    <h3>
+      <a class="nav-link" href="#roast_levels">Roast Levels</a>
+    </h3>
+  </nav>
+</section>
+
+<article id="origins">
+  <header>
+    <h2>Coffee Origins:</h2>
+    <p>Origins are...</p>
   </header>
 
   <section>
     <dl>
-      <dt>Light Roast:</dt>
+      <dt>Ethiopia:</dt>
       <dd>
-        Light roasts are roasted for a shorter duration at lower
-        temperatures, preserving the natural flavors and acidity of
-        the beans. They typically have a light brown color and higher
-        acidity, with subtle floral and fruity notes.
+        Considered the birthplace of coffee, Ethiopia produces a wide
+        range of coffee varieties with diverse flavor profiles.
+        Ethiopian coffee is known for its floral, fruity, and
+        sometimes wine-like characteristics.
       </dd>
 
-      <dt>Medium Roast:</dt>
+      <dt>Ethiopia (Yirgacheffe and Sidamo):</dt>
       <dd>
-        Medium roasts are roasted slightly longer than light roasts,
-        resulting in a medium brown color. They have a balanced flavor
-        profile with moderate acidity and increased sweetness. Medium
-        roasts often feature notes of chocolate, caramel, and
-        nuttiness.
+        Within Ethiopia, the Yirgacheffe and Sidamo regions are
+        particularly renowned for producing high-quality coffee beans
+        known for their floral, fruity, and sometimes tea-like
+        flavors.
       </dd>
 
-      <dt>Medium-Dark Roast:</dt>
+      <dt>Colombia:</dt>
       <dd>
-        Medium-dark roasts have a richer flavor and darker brown color
-        compared to medium roasts. They feature a fuller body and more
-        pronounced caramelization, with reduced acidity. Medium-dark
-        roasts may exhibit notes of bittersweet chocolate and toasted
-        nuts.
+        Colombia is famous for its smooth, well-balanced coffee with
+        mild acidity and medium body. Colombian coffee is grown in
+        several regions, including Medellin, Antioquia, and Huila.
       </dd>
 
-      <dt>Dark Roast:</dt>
+      <dt>Brazil:</dt>
       <dd>
-        Dark roasts are roasted for a longer duration at higher
-        temperatures, leading to a shiny, oily surface and a deep
-        brown or almost black color. Dark roasts have a bold, smoky
-        flavor with low acidity and pronounced bitterness. They often
-        feature notes of dark chocolate, caramel, and toasted grains.
+        As the world's largest coffee producer, Brazil produces a wide
+        variety of coffee beans. Brazilian coffee is known for its
+        nutty, chocolatey flavors and full body. Regions such as Minas
+        Gerais and São Paulo are particularly renowned.
       </dd>
 
-      <dt>Very Dark Roast (Espresso Roast):</dt>
+      <dt>Costa Rica:</dt>
       <dd>
-        Very dark roasts, also known as espresso roasts, are roasted
-        to the point of almost burning the beans. They have a glossy,
-        nearly black appearance and an intense, robust flavor profile.
-        Very dark roasts have minimal acidity and are characterized by
-        bold, charred notes with a lingering, bitter finish.
+        Costa Rican coffee is celebrated for its bright acidity,
+        medium body, and clean flavors. Tarrazú, Dota, and Tres Ríos
+        are some of the prominent coffee-growing regions in Costa
+        Rica.
+      </dd>
+
+      <dt>Guatemala:</dt>
+      <dd>
+        Guatemala produces coffee with a distinct acidity, balanced
+        sweetness, and fruity notes. Antigua, Huehuetenango, and Cobán
+        are well-known coffee regions in Guatemala.
+      </dd>
+
+      <dt>Kenya:</dt>
+      <dd>
+        Kenyan coffee is prized for its bright acidity, bold flavors,
+        and complex profiles. Coffees from regions such as Nyeri and
+        Kirinyaga are highly regarded for their wine-like acidity and
+        fruity notes.
+      </dd>
+
+      <dt>Panama:</dt>
+      <dd>
+        Panama is famous for its Geisha coffee, which is celebrated
+        for its floral aroma, vibrant acidity, and complex flavor
+        profile. Boquete and Volcán are key coffee-producing regions
+        in Panama.
       </dd>
     </dl>
   </section>
 </article>
 
-<article>
+<article id="cultivars">
   <header>
     <h2>Coffee Cultivars:</h2>
     <p>Cultivars are...</p>
@@ -135,83 +177,10 @@
   </section>
 </article>
 
-<article>
+<article id="wash-processes">
   <header>
-    <h2>Coffee Regions:</h2>
-    <p>Regions are...</p>
-  </header>
-
-  <section>
-    <dl>
-      <dt>Ethiopia:</dt>
-      <dd>
-        Considered the birthplace of coffee, Ethiopia produces a wide
-        range of coffee varieties with diverse flavor profiles.
-        Ethiopian coffee is known for its floral, fruity, and
-        sometimes wine-like characteristics.
-      </dd>
-
-      <dt>Ethiopia (Yirgacheffe and Sidamo):</dt>
-      <dd>
-        Within Ethiopia, the Yirgacheffe and Sidamo regions are
-        particularly renowned for producing high-quality coffee beans
-        known for their floral, fruity, and sometimes tea-like
-        flavors.
-      </dd>
-
-      <dt>Colombia:</dt>
-      <dd>
-        Colombia is famous for its smooth, well-balanced coffee with
-        mild acidity and medium body. Colombian coffee is grown in
-        several regions, including Medellin, Antioquia, and Huila.
-      </dd>
-
-      <dt>Brazil:</dt>
-      <dd>
-        As the world's largest coffee producer, Brazil produces a wide
-        variety of coffee beans. Brazilian coffee is known for its
-        nutty, chocolatey flavors and full body. Regions such as Minas
-        Gerais and São Paulo are particularly renowned.
-      </dd>
-
-      <dt>Costa Rica:</dt>
-      <dd>
-        Costa Rican coffee is celebrated for its bright acidity,
-        medium body, and clean flavors. Tarrazú, Dota, and Tres Ríos
-        are some of the prominent coffee-growing regions in Costa
-        Rica.
-      </dd>
-
-      <dt>Guatemala:</dt>
-      <dd>
-        Guatemala produces coffee with a distinct acidity, balanced
-        sweetness, and fruity notes. Antigua, Huehuetenango, and Cobán
-        are well-known coffee regions in Guatemala.
-      </dd>
-
-      <dt>Kenya:</dt>
-      <dd>
-        Kenyan coffee is prized for its bright acidity, bold flavors,
-        and complex profiles. Coffees from regions such as Nyeri and
-        Kirinyaga are highly regarded for their wine-like acidity and
-        fruity notes.
-      </dd>
-
-      <dt>Panama:</dt>
-      <dd>
-        Panama is famous for its Geisha coffee, which is celebrated
-        for its floral aroma, vibrant acidity, and complex flavor
-        profile. Boquete and Volcán are key coffee-producing regions
-        in Panama.
-      </dd>
-    </dl>
-  </section>
-</article>
-
-<article>
-  <header>
-    <h2>Coffee Processes:</h2>
-    <p>Processes are...</p>
+    <h2>Coffee Wash Processes:</h2>
+    <p>Wash processes are...</p>
   </header>
 
   <section>
@@ -273,6 +242,61 @@
         removing some of the mucilage from the beans before drying.
         Red Honey process coffees often have a medium to heavy body
         with a balanced acidity and sweet, fruity flavors.
+      </dd>
+    </dl>
+  </section>
+</article>
+
+<article id="roast_levels">
+  <header>
+    <h2>Coffee Roast Levels:</h2>
+    <p>Roast Levels are...</p>
+  </header>
+
+  <section>
+    <dl>
+      <dt>Light Roast:</dt>
+      <dd>
+        Light roasts are roasted for a shorter duration at lower
+        temperatures, preserving the natural flavors and acidity of
+        the beans. They typically have a light brown color and higher
+        acidity, with subtle floral and fruity notes.
+      </dd>
+
+      <dt>Medium Roast:</dt>
+      <dd>
+        Medium roasts are roasted slightly longer than light roasts,
+        resulting in a medium brown color. They have a balanced flavor
+        profile with moderate acidity and increased sweetness. Medium
+        roasts often feature notes of chocolate, caramel, and
+        nuttiness.
+      </dd>
+
+      <dt>Medium-Dark Roast:</dt>
+      <dd>
+        Medium-dark roasts have a richer flavor and darker brown color
+        compared to medium roasts. They feature a fuller body and more
+        pronounced caramelization, with reduced acidity. Medium-dark
+        roasts may exhibit notes of bittersweet chocolate and toasted
+        nuts.
+      </dd>
+
+      <dt>Dark Roast:</dt>
+      <dd>
+        Dark roasts are roasted for a longer duration at higher
+        temperatures, leading to a shiny, oily surface and a deep
+        brown or almost black color. Dark roasts have a bold, smoky
+        flavor with low acidity and pronounced bitterness. They often
+        feature notes of dark chocolate, caramel, and toasted grains.
+      </dd>
+
+      <dt>Very Dark Roast (Espresso Roast):</dt>
+      <dd>
+        Very dark roasts, also known as espresso roasts, are roasted
+        to the point of almost burning the beans. They have a glossy,
+        nearly black appearance and an intense, robust flavor profile.
+        Very dark roasts have minimal acidity and are characterized by
+        bold, charred notes with a lingering, bitter finish.
       </dd>
     </dl>
   </section>
