--- a/ch_100_app/templates/home.html
+++ b/ch_100_app/templates/home.html
@@ -1,24 +1,27 @@
-{% extends 'base.html' %}
-{% block content %}
+{% extends 'base.html' %} {% block content %}
 
 <h1>Coffee Hunter 100</h1>
-<p><em>Your field notes for recording the wonderful world of coffee.</em></p>
+<p>
+  <em
+    >Your field notes for recording the wonderful world of coffee.</em
+  >
+</p>
 
 {% if not beans %}
-  <div>
-    <p><strong>It looks like you haven't added any beans!</strong></p>
-    <a href="{{ url_for('main.new_bean') }}" class="btn">Add a Bean!</a>
-  </div>
-{% endif %}
-
-{% for bean in beans %}
-<div class="bean">
-    <a href="/bean/{{ bean.id }}">{{ bean.name }}</a>
-    <p><strong>Origin:</strong> {{ bean.origin }}</p>
-    <p><strong>Cultivar:</strong> {{ bean.cultivar }}</p>
-    <p><strong>Wash Process:</strong> {{ bean.wash_process }}</p>
-    <p><strong>Roast Level:</strong> {{ bean.roast_level }}</p>
+<div>
+  <p><strong>It looks like you haven't added any beans!</strong></p>
+  <a href="{{ url_for('main.new_bean') }}" class="btn">Add a Bean!</a>
 </div>
-{% endfor %}
-
-{% endblock %}
+{% endif %} {% for bean in beans %}
+<div class="bean">
+  <a
+    class="link-primary link-offset-2 link-underline-opacity-25 link-underline-opacity-100-hover"
+    href="/bean/{{ bean.id }}"
+    >{{ bean.name }}</a
+  >
+  <p><strong>Origin:</strong> {{ bean.origin }}</p>
+  <p><strong>Cultivar:</strong> {{ bean.cultivar }}</p>
+  <p><strong>Wash Process:</strong> {{ bean.wash_process }}</p>
+  <p><strong>Roast Level:</strong> {{ bean.roast_level }}</p>
+</div>
+{% endfor %} {% endblock %}
