--- a/ch_100_app/templates/signup.html
+++ b/ch_100_app/templates/signup.html
@@ -13,4 +13,10 @@ render_field %} {% block content %}
   </fieldset>
 </form>
 
+<p>Already have an account?</p>
+<p>
+  To add new beans and save tasting notes please
+  <a class="link-opacity-100-hover" href="/login">login</a>.
+</p>
+
 {% endblock %}
