--- a/ch_100_app/templates/base.html
+++ b/ch_100_app/templates/base.html
@@ -26,27 +26,26 @@
         <li>
           <a class="nav-link" href="/">Home</a>
         </li>
-        <li>
-          <a class="nav-link" href="/coffee_context"
-            >Coffee Context</a
-          >
-        </li>
         {% if current_user.is_authenticated %}
         <li class="nav-item">
-          <a class="nav-link" href="/new_bean">New Bean</a>
+          <a class="nav-link" href="/new_bean">Add Bean</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/new_note">New Note</a>
+          <a class="nav-link" href="/new_note">Add Tasting Note</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/logout">Log Out</a>
+        <li class="nav-item ms-auto">
+          <a id="nav-logout" class="nav-link" href="/logout"
+            >Log Out</a
+          >
         </li>
         {% else %}
-        <li class="nav-item">
-          <a class="nav-link" href="/signup">Signup</a>
+        <li class="nav-item ms-auto">
+          <a id="nav-signup" class="nav-link" href="/signup"
+            >Signup</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/login">Log In</a>
+          <a id="nav-login" class="nav-link" href="/login">Log In</a>
         </li>
         {% endif %}
       </ul>
