--- a/ch_100_app/templates/base.html
+++ b/ch_100_app/templates/base.html
@@ -27,11 +27,25 @@
           <a class="nav-link" href="/">Home</a>
         </li>
         {% if current_user.is_authenticated %}
-        <li class="nav-item">
-          <a class="nav-link" href="/new_bean">Add Bean</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/new_note">Add Tasting Note</a>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link dropdown-toggle"
+            data-bs-toggle="dropdown"
+            href="#"
+            role="button"
+            aria-expanded="false"
+            >Create</a
+          >
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="/new_bean">Add Bean</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="/new_note"
+                >Add Tasting Note</a
+              >
+            </li>
+          </ul>
         </li>
         <li class="nav-item ms-auto">
           <a id="nav-logout" class="nav-link" href="/logout"
@@ -56,6 +70,12 @@
       <p>You are logged in as {{ current_user.username }}</p>
       {% endif %} {% block content %} {% endblock %}
     </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 
   <footer class="footer mt-auto py-3 bg-body-tertiary">
